# cpp-software-design

./: .gitignore  Benchmark.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  estimate.sh  specs  tasks.txt
assets/: test.txt
docs/: BenchmarkBST.md  BenchmarkSTK.md  benchmarks-comapare-tree.result.md  tasks.md
include/: index.h  node.h  stack-dynamic.h  stack-linked-dynmic.h  stack-vector.h  stack.h
include/benchmarks/: adaptor.benchmark.h  benchmark_rb_bs_map_set.h  binary-tree.benchmark.h  bst.benchmark.h  index.h  rbt.benchmark.h
include/class/: data-structur.utils.h  dic.h  math-expression.h
include/class/binary-search-tree/: BST.hpp  TreeNode.hpp
include/class/collections/: Dictionary.hpp
include/class/helpers/: benchmark-helpers.h
include/class/lists/: HList.h  h-list.h  index.h
include/class/red-black-tree/: rbt_node.h  rbt_tree.h
include/class/stack/: index.h  node.h  stack-dynamic.h  stack-linked.h  stack-vector.h
include/class/tree/: avl_tree.h  binary_tree_search.h  red_black_tree.h  tree.h  treenode.h
include/interface/: stack.h
include/shared/: insi-colors.h
include/templates/: BST.cpp  node.tpp  rbt_node.cpp  rbt_tree.cpp  stack-dynamic.tpp  stack-linked.tpp  stack-vector.tpp  stack.tpp  treenode.tpp
include/templates/benchmarks/: benchmark_rb_bs_map_set.tpp
include/utils/: DataStructureUtils.hpp
scripts/: genrate-randoms-ben-trees.sh  plot_benchmark.py
src/: main.cpp
src/benchmarks/: adaptor.benchmark.cpp  binary-search-tree.benchmark.cpp  index.h  red-black-tree.benchmark.cpp  tree.benchmark.cpp
(+7 files in other folders)
